Added a removeFirst to match removeLast